feat: make configs list endpoint filterable by application context
