# openapi.yaml
@@ -13,7 +13,7 @@ info:
 servers:
   - url: "https://configs.app.berlinskylarks.de/api/v1"
     description: "Production Server"
-  - url: "http://localhost:8080"
+  - url: "http://localhost:8080/api/v1"
     description: "Development Server"
 paths:
   /configs:
@@ -21,6 +21,13 @@ paths:
       summary: "List all configurations"
       description: "Provides a list of all configurations with their associated feature flags."
       operationId: "getConfigs"
+      parameters:
+        - name: context
+          in: query
+          description: "Optional application context to filter for."
+          required: false
+          schema:
+            $ref: "#/components/schemas/ApplicationContext"
       responses:
         '200':
           description: "A list of configurations"
